Tweak default styles

--- a/src/styles/components/examples/_containers.css
+++ b/src/styles/components/examples/_containers.css
@@ -4,38 +4,24 @@ Containers
 
 */
 
-/* TODO: if this makes the horizontal spacing too irregular compared to the predictable spacing scale used for vertical spacing, go back to the defined values at each breakpoint */
-.container { 
-  /* @apply .ml-auto .mr-auto .ph3 .mw9; */
-  @apply .ml-auto .mr-auto .mw9;
-  padding-left: 3%;
-  padding-right: 3%;
-
-  /* TODO: try padding-left: 3%; padding-right: 3% instead? */
-
- /*  @media (--md) { @apply .ph4 }
-  @media (--lg) { @apply .ph5 } */
-
-  /* @supports (display: grid) { @apply .mw9 } */
+.container {
+  @apply .ml-auto .mr-auto .ph3 .mw9;
+  @media (--md) { @apply .ph4 }
+  @media (--xl) { @apply .ph5 }
 }
 
 .container-not-centered { 
-  /* @apply .ph3 .mw8; */
-  @apply .ph3 .mw8;
-  padding-left: 3%;
-  padding-right: 3%;
-
-  /* @media (--md) { @apply .ph4 }
-  @media (--lg) { @apply .ph5 }
-
-  @supports (display: grid) { @apply .mw9 } */
+  @apply .ph3 .mw9;
+  @media (--md) { @apply .ph4 }
+  @media (--xl) { @apply .ph5 }
 }
 
 .container-full { 
-  /* @apply .ph3; */
-  padding-left: 3%;
-  padding-right: 3%;
-
-  /* @media (--md) { @apply .ph4 }
-  @media (--lg) { @apply .ph5 } */
+  @apply .ph3;
+  @media (--md) { @apply .ph4 }
+  @media (--xl) { @apply .ph5 }
 }
+
+/* TODO: adjust width as needed */
+/* See: https://www.lullabot.com/articles/unexpected-power-of-viewport-units-in-css */
+.break-out { @apply .relative .left-50 .transX--50 .vw-100 }
