--- a/src/styles/base/_font-face.css
+++ b/src/styles/base/_font-face.css
@@ -3,13 +3,14 @@
 Font-face declarations
 
 TODO: make the path to the fonts directory `../fonts/font-files.woff`
-TODO: include specific blocks for "font-style: italic", "font-weight: 700", etc so the browser doesn't fake these missing styles because it doesn't realize I have a webfont for it: https://www.smashingmagazine.com/2018/07/smashingconf-videos-web-fonts-performance/
+TODO: include specific entries for "font-style: italic", "font-weight: 700", etc so the browser doesn't fake these missing styles because it doesn't realize I have a webfont for it: https://www.smashingmagazine.com/2018/07/smashingconf-videos-web-fonts-performance/
 
 */
 
 /* news-cycle-regular - latin-ext_latin */
 /* @font-face {
   font-family: 'News Cycle';
+  font-display: swap;
   font-style: normal;
   font-weight: 400;
   src: local('News Cycle'), local('NewsCycle'),
