--- a/src/styles/components/examples/_filters.css
+++ b/src/styles/components/examples/_filters.css
@@ -10,6 +10,9 @@
  *
  */
 
+.filter { @apply .f3 .animate }
+.active-filter { @apply .scale-1p1 .gold }
+
 /* When the input is checked, adjust the styling of the NEXT label in the DOM */
 .filter-input {
   @apply .sr-only; /* necessary to hide input in IE while keeping it accessible */
