Fix b--transparent utility

--- a/src/styles/utilities/_border-color.css
+++ b/src/styles/utilities/_border-color.css
@@ -77,7 +77,7 @@ Adapted from: http://tachyons.io/docs/themes/borders/
   .b--washed-yellow { border-color: var(--washed-yellow) }
   .b--washed-red    { border-color: var(--washed-red) }
 
-  .b--transparent   { border-color: var(--transparent) }
+  .b--transparent   { border-color: transparent }
   .b--current       { border-color: currentColor }
   .b--inherit       { border-color: inherit }
 
