--- a/src/styles/components/examples/_containers.css
+++ b/src/styles/components/examples/_containers.css
@@ -8,12 +8,18 @@
   @apply .ml-auto .mr-auto .ph3 .mw9;
   @media (--md) { @apply .ph4 }
   @media (--xl) { @apply .ph5 }
+
+  /* Use a smaller max width in IE? */
+  /* @supports (display: grid) { @apply .mw9 } */
 }
 
 .container-not-centered { 
-  @apply .ph3 .mw9;
+  @apply .ph3 .mw8;
   @media (--md) { @apply .ph4 }
   @media (--xl) { @apply .ph5 }
+
+  /* Use a smaller max width in IE? */
+  /* @supports (display: grid) { @apply .mw9 } */
 }
 
 .container-full { 
@@ -22,6 +28,6 @@
   @media (--xl) { @apply .ph5 }
 }
 
-/* TODO: adjust width as needed */
-/* See: https://www.lullabot.com/articles/unexpected-power-of-viewport-units-in-css */
+/* TODO: adjust breakout width as needed */
+/* https://www.lullabot.com/articles/unexpected-power-of-viewport-units-in-css */
 .break-out { @apply .relative .left-50 .transX--50 .vw-100 }
