Import new component class

--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -23,6 +23,7 @@ Component classes
 @import './examples/floating-shapes';
 @import './examples/headings';
 @import './examples/icons';
+@import './examples/images';
 @import './examples/inputs';
 @import './examples/links';
 @import './examples/tooltips'; 
