Update starter based on Ashley's site

--- a/src/styles/components/examples/_buttons.css
+++ b/src/styles/components/examples/_buttons.css
@@ -5,7 +5,7 @@
  */
 
 .btn { 
-  @apply .bw1 .b--black .bg-black .pink .pv2 .ph3 .lh-solid .ttu .tracked .animate;
+  @apply .ba-1 .b--black .bg-black .pink .pv2 .ph3 .lh-solid .ttu .tracked .animate;
 
   &:hover { @apply .bg-pink .black }
 
