--- a/src/styles/components/examples/_links.css
+++ b/src/styles/components/examples/_links.css
@@ -6,7 +6,7 @@
 
 /* NOTE: The .customizable class is added to all Twitter links automatically" */
 .link:not(.customisable) {
-  @apply .shadow-lg .bw1 .b--black .bg-black .pv2 .ph3 .lh-tall .ttu .tracked .white .animate;
+  @apply .shadow-lg .ba-1 .b--black .bg-black .pv2 .ph3 .lh-tall .ttu .tracked .white .animate;
   border-radius: 30px;
 
   &:hover { @apply .b--pink .bg-pink .black }
