--- a/src/styles/plugins/examples/react-image-lightbox.css
+++ b/src/styles/plugins/examples/react-image-lightbox.css
@@ -23,7 +23,9 @@
 background: rgba(0, 0, 0, 0.2)
   url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgd2lkdGg9IjIwIiBoZWlnaHQ9IjM0Ij48cGF0aCBkPSJtIDE5LDMgLTIsLTIgLTE2LDE2IDE2LDE2IDEsLTEgLTE1LC0xNSAxNSwtMTUgeiIgZmlsbD0iI0ZGRiIvPjwvc3ZnPg==)
   no-repeat center; */
-  @media (--md) { display: block }
+  @media screen and (min-width: 48em) {
+    display: block
+  }
 }
 
 .ril__navButtonNext.ril__navButtonNext {
@@ -34,7 +36,10 @@ background: rgba(0, 0, 0, 0.2)
 background: rgba(0, 0, 0, 0.2)
   url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgd2lkdGg9IjIwIiBoZWlnaHQ9IjM0Ij48cGF0aCBkPSJtIDEsMyAyLC0yIDE2LDE2IC0xNiwxNiAtMSwtMSAxNSwtMTUgLTE1LC0xNSB6IiBmaWxsPSIjRkZGIi8+PC9zdmc+)
   no-repeat center; */
-  @media (--md) { display: block }
+ 
+  @media screen and (min-width: 48em) {
+    display: block
+  }
 }
 
 .ril__toolbar.ril__toolbar {
@@ -74,4 +79,7 @@ justify-content: space-between; */
   color: hsl(0, 0%, 0%, 0.8); 
 } */
 
-.ril__captionContent { @apply .ml-auto .mr-auto }
+.ril__captionContent { 
+  margin-left: auto;
+  margin-right: auto;
+ }
